Start activity for result

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -84,4 +84,10 @@
             android:textAlignment="center"
             tools:text="10"/>
     </LinearLayout>
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:onClick="showHistory"
+        android:text="@string/show_history"/>
 </LinearLayout>
