Extract string constants

--- a/app/src/main/res/layout/activity_history.xml
+++ b/app/src/main/res/layout/activity_history.xml
@@ -36,14 +36,14 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:onClick="previous"
-            android:text="<"/>
+            android:text="@string/prev"/>
 
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:onClick="next"
-            android:text=">"/>
+            android:text="@string/next"/>
 
     </LinearLayout>
 
